# Coding-Projects

./: .gitignore  README.md
CS 498/HW 3/: CMakeLists.txt  reversed.cpp
CS 498/HW 3/tests/: -Wall  CMakeLists.txt  catch.hpp  tests_main.cpp
CodeForces/Next Round/: CMakeLists.txt  main.cpp
CodeForces/Team/: CMakeLists.txt  main.cpp
CodeForces/WayTooLongWords/: CMakeLists.txt  main.cpp
General Personal Projects/: a.out  foo  indenter_for_C.c  test.c
General Personal Projects/Random-C-Coding/: PickSeven.c  WheelOfFortune  WheelOfFortune.c
General Personal Projects/decryption_testing/: main.py
Highlights!/: README.md
Highlights!/A*/: CMakeLists.txt  README.md  advanced_node.cpp  advanced_node.h  dodecahedron.cpp  dodecahedron.h  face.cpp  face.h  main.cpp  piece.cpp  piece.h  state_node.cpp  state_node.h
Highlights!/Algorithms/: DP_algorithms.py  Dijkstra.py
Highlights!/Minesweeper/: CMakeLists.txt  CMakeLocal.txt  mainwindow.cpp  mainwindow.h  tile.cpp  tile.h  tilebutton.cpp  tilebutton.h  tiles.qrc
KnR Examples/Chapter1/: Cels_Fahr_table.c  Fahr_Cels_table.c  Fahr_Cels_table_v2.c  Fahr_Cels_table_varient.c  I_to_O.c  a.out  bar  basic_c_syntax_checker.c  count_all  count_all.c  count_all_v2.c  count_chars.c  count_lines.c  custom_wc.c  detab.c  entab.c  find_gt_80.c  foo  get_longest_line.c  get_longest_line_v1.1.c  get_longest_line_v2.c  length_of_words_histo.c  letters_freq_histo.c  line_folder.c  list_words.c  power.c  print_EOF.c  printer.c  remove_comments.c  reverse_input  reverse_input.c  rm_blanks  rm_blanks.c  (+3 more)
Testing/: main.cpp
(+26 files in other folders)
